    lms-ui-combobox [chilan]
  - enhancement: allow to upload files using drag&drop technique [chilan]
  - enhancement: replaced TinyMCE 3.x with 4.x handled by composer [chilan]
  - enhancement: almost the same special symbols are supported for sendinvoices.mail_body as
    for lms-notify.php mail_body setting [chilan]

version 1.11.23 (2018-03-21):

  - improvement: create db dumps with multi records inserts statements which
    dramatically reduces db restore time [chilan]
  - enhancement: allow to backup all financial documents issued a given day
    in selected output directory (--backup and --output-directory parameters
    were introduced for lms-sendinvoices.php) [chilan]
  - enhancement: added payments.check_invoices ('false' by default) configuration
    variable support and its behavior is the same as deprecated daemon payments
    module configuration variable [chilan]
  - enhancement: added support for default queue categories used during new ticket
    creation [chilan]
  - improvement: pdf ticket and document attachments are displayed in popup window
    instead of forcing writing them to disk [chilan]
  - improvement: phpui.pin_min_size, phpui.pin_max_size and phpui.pin_allowed_characters
    configurtion variables control customer pin constraints (by default: 4, 6 and
    '0123456789' respectively) [chilan]
  - improvement: suppport for teryt locations where city consists of many sections/districts
    [chilan]
  - improvement: phpui.category_adjustments_in_ticketedit (false by default) controls if selected
    categories in ticket edit form are automatically adjusted with queue change [chilan]
  - improvement: pdf and html unification of receipts.default_printpage ('original,copy' by
    default) configuration variable support which controls how many receipts are printed [chilan]
  - enhancement: log ticket category changes [chilan]
  - enhancement: implemented helpdesk notification mail threading compatible with RFC5322 [chilan]